--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npx tailwindcss --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./wwwroot/site.min.css",
     "watch": "npx tailwindcss --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./wwwroot/site.min.css --watch",
     "publish": "npx tailwindcss --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./wwwroot/site.min.css --minify",
+    "tree-shake": "npx tailwindcss -i ./Styles/app.css -o ./wwwroot/app.css --minify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
