--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -6,4 +6,20 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <Target Name="CheckForNpm" BeforeTargets="NpmInstall">
+        <Exec Command="npm -v" ContinueOnError="false">
+            <Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
+        </Exec>
+        <Error Condition="'$(ErrorCode)' != '0'" Text="You must install node and npm to build this project" />
+    </Target>
+    
+    <Target Name="NpmInstall" BeforeTargets="ProcessCSS" Inputs="package.json" Outputs="$(NpmLastInstall) ">
+        <Exec Command="npm install" />
+        <Touch Files="$(NpmLastInstall)" AlwaysCreate="true" />
+    </Target>
+    
+    <Target Name="ProcessCSS" BeforeTargets="Compile">
+        <Exec Command="npm run tcss" />
+    </Target>
+
 </Project>
