--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -4,6 +4,23 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <NpmLastInstall>node_modules/.last-install</NpmLastInstall>
   </PropertyGroup>
+
+  <Target Name="CheckForNpm" BeforeTargets="NpmInstall">
+    <Exec Command="node --version" ContinueOnError="false">
+      <Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
+    </Exec>
+    <Error Condition="'$(ErrorCode)' != '0'" Text="You must install node and npm to build this project" />
+  </Target>
+    
+  <Target Name="NpmInstall" BeforeTargets="ProcessCSS" Inputs="package.json" Outputs="$(NpmLastInstall) ">
+    <Exec Command="npm install" ContinueOnError="false" />
+    <Touch Files="$(NpmLastInstall)" AlwaysCreate="true" />
+  </Target>
+  
+  <Target Name="ProcessCSS" BeforeTargets="Compile">
+    <Exec Command="npm run tcss" />
+  </Target>
 
 </Project>
