--- a/.github/workflows/dockerhub-push.yml
+++ b/.github/workflows/dockerhub-push.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   # this workflow contains a single job called "push_to_registry"
   push_to_registry:
+    name: push docker image to docker hub
     # the type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -17,24 +18,16 @@ jobs:
       - name: checkout the repository
         uses: actions/checkout@v3
 
-      # set up qemu
-      - name: set up qemu
-        uses: docker/setup-qemu-action@v1
-
-      # set up docker buildx
-      - name: set up docker buildx
-        uses: docker/setup-buildx-action@v1
-
       # login into docker hub
       - name: login to docker hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # build the docker image then push it to docker hub
       - name: build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
